--- a/view/index.html
+++ b/view/index.html
@@ -5,13 +5,13 @@
 	<script type="text/javascript" src="http://lib.sinaapp.com/js/jquery/2.0.3/jquery-2.0.3.js"></script>
 	<script type="text/javascript">
 	$(function () {
-		var bindClick = function () {
-			$('.order-btn').click(function () {
-				var $this = $(this);
-				reloadTable(table, 'order='+$this.text()+'&asc='+$this.data('asc'));
-			});
-		};
 		var reloadTable = function(table, options) {
+			var bindClick = function () {
+				$('.order-btn').click(function () {
+					var $this = $(this);
+					reloadTable(table, 'order='+$this.data('order')+'&asc='+$this.data('asc'));
+				});
+			};
 			$('#C').load('/table/'+table+'?'+options, bindClick);
 		};
 		$('.table-btn').click(function () {
