--- a/view/index.html
+++ b/view/index.html
@@ -1,37 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>x</title>
-	<script type="text/javascript" src="http://lib.sinaapp.com/js/jquery/2.0.3/jquery-2.0.3.js"></script>
-	<script type="text/javascript">
-	$(function () {
-		var reloadTable = function(table, options) {
-			var bindClick = function () {
-				$('.order-btn').click(function () {
-					var $this = $(this);
-					reloadTable(table, 'order='+$this.data('order')+'&asc='+$this.data('asc'));
-				});
-			};
-			$('#C').load('/table/'+table+'?'+options, bindClick);
-		};
-		$('.table-btn').click(function () {
-			reloadTable($(this).text());
-		});
-	});
-	</script>
-</head>
-<body>
 
 <ul>
-	<?php foreach ($tables as $table): ?>
+	<?php foreach ($tables as $t): ?>
 		<li>
-			<span class="table-btn"><?= $table ?></span>
+			<a class="table-btn" href="?table=<?= $t ?>"><?= $t ?></a>
 		</li>
 	<?php endforeach ?>
 </ul>
 
-<div id="C"></div>
+<form>
+	<input name="sql" value="<?= htmlspecialchars($sql) ?>">
+	<button>执行 SQL</button>
+</form>
 
-</table>
-</body>
-</html>
+<?php if (empty($table_data)): ?>
+	no data
+<?php else: include 'data.html'; ?>
+<?php endif ?>
