--- a/view/layout.html
+++ b/view/layout.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>x</title>
-
+	<title>MyAdmin</title>
+	<style type="text/css">
+	.long {
+		width: 50em;
+	}
+	#Side {
+		float: left;
+	}
+	#C {
+		float: left;
+		width: 900px;
+	}
+	tr:nth-child(2n) {
+		background: rgb(239, 242, 242);
+	}
+	</style>
 </head>
 <body>
-
+<h1>
+	<a href="/">MyAdmin</a>
+</h1>
 <?php include $_inner_ ?>
 
 </body>
