--- a/view/edit.html
+++ b/view/edit.html
@@ -1,15 +1,20 @@
-<?php if ($confirm_sql): ?>
-	<form>
-		<code><?= $confirm_sql ?></code>
+<?php if (isset($confirm_sql)): ?>
+	<form action="/exec" method="post">
+		<input class="long" name="sql" value="<?= htmlspecialchars($confirm_sql) ?>">
 		<button>确认执行</button>
 	</form>
 <?php endif ?>
-<form>
+
+<h1><?= $table ?></h1>
+<form method="post">
 	<?php foreach ($row as $key => $value): ?>
 		<label>
 			<?= $key ?>
 			<input name="<?= $key ?>" value="<?= htmlspecialchars($value) ?>">
 		</label>
+		<br>
 	<?php endforeach ?>
-	<button>修改</button>
+	<input type="hidden" name="table" value="<?= $table ?>">
+	<input type="hidden" name="pkey" value="<?= $pkey ?>">
+	<button>准备修改</button>
 </form>
