--- a/view/data.html
+++ b/view/data.html
@@ -22,7 +22,7 @@
 				<?php endforeach ?>
 				<td>
 					<a href="/edit?<?= http_build_query(['table' => $table, 'act' => 'update', 'id' => $v[$pkey]]) ?>">edit</a>
-					<a href="/edit?<?= http_build_query(['table' => $table, 'act' => 'insert', 'id' => $v[$pkey]]) ?>">copy</a>
+					<a href="/insert?<?= http_build_query(['table' => $table, 'act' => 'insert', 'id' => $v[$pkey]]) ?>">copy</a>
 				</td>
 			</tr>
 		<?php endforeach ?>
