--- a/view/confirm.html
+++ b/view/confirm.html
@@ -1,5 +1,5 @@
 <?php if (isset($confirm_sql)): ?>
-	<form action="/exec" method="post">
+	<form action="exec" method="post">
 		<textarea class="long" name="sql"><?= $confirm_sql ?></textarea>
 		<button>确认执行</button>
 	</form>
