--- a/view/edit.html
+++ b/view/edit.html
@@ -3,11 +3,12 @@
 <h1><?= $table ?></h1>
 <form method="post">
 	<?php foreach ($row as $key => $value): ?>
+		<div>
 		<label>
-			<?= $key ?>
+			<span class="left-label"><?= $key ?></span>
 			<input name="<?= $key ?>" value="<?= htmlspecialchars($value) ?>">
 		</label>
-		<br>
+		</div>
 	<?php endforeach ?>
 	<input type="hidden" name="table" value="<?= $table ?>">
 	<input type="hidden" name="pkey" value="<?= $pkey ?>">
