--- a/view/layout.html
+++ b/view/layout.html
@@ -16,6 +16,12 @@
 	tr:nth-child(2n) {
 		background: rgb(239, 242, 242);
 	}
+	.left-label {
+		width: 9em;
+		display: inline-block;
+		text-align: right;
+		padding-right: 0.3em;
+	}
 	</style>
 </head>
 <body>
