--- a/view/insert.html
+++ b/view/insert.html
@@ -1,6 +1,8 @@
 <?php include 'confirm.html' ?>
 
-<h1><?= $table ?></h1>
+<h1>
+	<a href="index?table=<?= $table ?>"><?= $table ?></a>
+</h1>
 <form method="post">
 	<?php foreach ($values as $key => $value): ?>
 		<div>
