--- a/view/data.html
+++ b/view/data.html
@@ -21,8 +21,10 @@
 					<td><?= htmlspecialchars($value) ?></td>
 				<?php endforeach ?>
 				<td>
-					<a href="edit?<?= http_build_query(['table' => $table, 'act' => 'update', 'id' => $v[$pkey]]) ?>">edit</a>
-					<a href="insert?<?= http_build_query(['table' => $table, 'act' => 'insert', 'id' => $v[$pkey]]) ?>">copy</a>
+				<?php if (!Service('config')['readonly']): ?>
+					<a href="edit?<?= http_build_query(['table' => $table, 'id' => $v[$pkey]]) ?>">edit</a>
+					<a href="insert?<?= http_build_query(['table' => $table, 'id' => $v[$pkey]]) ?>">copy</a>
+				<?php endif ?>
 				</td>
 			</tr>
 		<?php endforeach ?>
