--- a/view/layout.html
+++ b/view/layout.html
@@ -22,6 +22,11 @@
 		text-align: right;
 		padding-right: 0.3em;
 	}
+	.err {
+		color: rgb(161, 31, 31);
+		border: 1px solid rgb(184, 87, 87);
+		padding: 8px;
+	}
 	</style>
 </head>
 <body>
