--- a/view/data.html
+++ b/view/data.html
@@ -3,7 +3,7 @@
 		<tr>
 			<?php foreach (array_keys($table_data[0]) as $key): ?>
 				<th>
-					<a class="order-btn" href="?<?= http_build_query(['asc' =>1 - _get('asc'), 'table' => $table, 'order' => $key]) ?>">
+					<a class="order-btn" href="?<?= append_query(['asc' =>1 - _get('asc'), 'table' => $table, 'order' => $key]) ?>">
 						<?= $key ?>
 						<?php if (_get('order') == $key): ?>
 							<?= _get('asc') ? '↑' : '↓' ?>
@@ -26,7 +26,7 @@
 						<?php endif ?>
 					>
 					<?php if (isset($fkt[$table][$key])): $v = $fkt[$table][$key]; ?>
-						<a href="?<?= http_build_query(['sql' => "SELECT * FROM `{$v[0]}` WHERE `$v[1]`=".Service('db')->quote($value)]).'LIMIT 1' ?>"><?= htmlspecialchars($value) ?></a>
+						<a href="?<?= append_query(['sql' => "SELECT * FROM `{$v[0]}` WHERE `$v[1]`=".Service('db')->quote($value)]).'LIMIT 1' ?>"><?= htmlspecialchars($value) ?></a>
 					<?php else: ?>
 						<?= htmlspecialchars($value) ?>
 					<?php endif ?>
@@ -34,8 +34,8 @@
 				<?php endforeach ?>
 				<td>
 				<?php if (!Service('config')['readonly'] && $table): ?>
-					<a href="edit?<?= http_build_query(['table' => $table, 'id' => $row[$pkey]]) ?>">edit</a>
-					<a href="insert?<?= http_build_query(['table' => $table, 'id' => $row[$pkey]]) ?>">copy</a>
+					<a href="edit?<?= append_query(['table' => $table, 'id' => $row[$pkey]]) ?>">edit</a>
+					<a href="insert?<?= append_query(['table' => $table, 'id' => $row[$pkey]]) ?>">copy</a>
 				<?php endif ?>
 				</td>
 			</tr>
