--- a/view/index.html
+++ b/view/index.html
@@ -15,7 +15,7 @@
 <ul>
 	<?php foreach ($tables as $t): ?>
 		<li>
-			<a class="table-btn" href="?<?= http_build_query(['table' => $t, 'dbname' => _get('dbname')]) ?>">
+			<a class="table-btn" href="?<?= append_query(['table' => $t, 'dbname' => _get('dbname')]) ?>">
 				<?php if ($t === _get('table')) echo htmlspecialchars('>') ?>
 				<?= $t ?>
 			</a>
