--- a/view/confirm.html
+++ b/view/confirm.html
@@ -1,6 +1,7 @@
 <?php if (isset($confirm_sql)): ?>
 	<form action="exec" method="post">
 		<textarea class="long" name="sql"><?= $confirm_sql ?></textarea>
+		<input type="hidden" name="dbname" value="<?= $dbname ?>">
 		<button>确认执行</button>
 	</form>
 <?php endif ?>
