--- a/view/index.html
+++ b/view/index.html
@@ -31,7 +31,7 @@
 		<button>执行 SQL</button>
 	</form>
 	<div>
-		<a href="insert?table=<?= $table ?>">insert</a>
+		<a href="insert?<?= http_build_query(compact('table', 'dbname')) ?>">insert</a>
 	</div>
 
 	<?php if ($err): ?>
