--- a/view/layout.html
+++ b/view/layout.html
@@ -31,6 +31,9 @@
 		border: 1px solid rgb(184, 87, 87);
 		padding: 8px;
 	}
+	.where-input {
+		text-align: center;
+	}
 	</style>
 	<script type="text/javascript" src="jquery-2.0.3.js"></script>
 	<script type="text/javascript">
