--- a/view/edit.html
+++ b/view/edit.html
@@ -2,7 +2,7 @@
 <h1>
 	<a href="index?table=<?= $table ?>"><?= $table ?></a>
 </h1>
-<form method="post">
+<form method="post" action="?dbname=<?= _get('dbname') ?>">
 	<?php foreach ($row as $key => $value): ?>
 		<div>
 		<label>
