--- a/view/data.html
+++ b/view/data.html
@@ -41,7 +41,7 @@
 				<?php endforeach ?>
 				<td>
 				<?php if (!$GLOBALS['config']['readonly'] && $table): ?>
-					<a href="edit?<?= append_query(['table' => $table, 'id' => $row[$pkey]]) ?>">edit</a>
+					<a href="edit/<?= $row[$pkey] ?>?<?= append_query(['table' => $table, 'id' => $row[$pkey]]) ?>">edit</a>
 					<a href="insert?<?= append_query(['table' => $table, 'id' => $row[$pkey]]) ?>">copy</a>
 				<?php endif ?>
 				</td>
