--- a/view/confirm.html
+++ b/view/confirm.html
@@ -1,7 +1,7 @@
 <?php if (isset($confirm_sql)): ?>
-	<form action="exec" method="post">
+	<form action="/exec_sql" method="post">
 		<textarea class="long" name="sql"><?= $confirm_sql ?></textarea>
-		<input type="hidden" name="dbname" value="<?= Service('dbname') ?>">
+		<input type="hidden" name="dbname" value="<?= $GLOBALS['dbname'] ?>">
 		<button>确认执行</button>
 	</form>
 <?php endif ?>
