--- a/view/layout.html
+++ b/view/layout.html
@@ -34,6 +34,17 @@
 	.where-input {
 		text-align: center;
 	}
+	header {
+		background: black;
+	}
+	header h1 {
+		margin-top: 0;
+		padding: 6px;
+	}
+	header a {
+		color: white;
+		text-decoration: none;
+	}
 	</style>
 	<script type="text/javascript" src="jquery-2.0.3.js"></script>
 	<script type="text/javascript">
@@ -52,9 +63,11 @@
 	</script>
 </head>
 <body>
+<header>
 <h1>
 	<a href="index">MyAdmin</a>
 </h1>
+</header>
 <?php include $_inner_ ?>
 
 <footer>
