--- a/view/layout.html
+++ b/view/layout.html
@@ -45,6 +45,14 @@
 		color: white;
 		text-decoration: none;
 	}
+	li {
+		list-style-type: circle;
+	}
+	.on {
+		list-style-type: square;
+		font-weight: bold;
+		text-decoration: none;
+	}
 	</style>
 	<script type="text/javascript" src="jquery-2.0.3.js"></script>
 	<script type="text/javascript">
@@ -68,6 +76,7 @@
 	<a href="index">MyAdmin</a>
 </h1>
 </header>
+
 <?php include $_inner_ ?>
 
 <footer>
